@@ -5,7 +5,8 @@ Changelog
 1.14.4 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Fix post upgrade ordering which was broken since 1.11.0.
+  [jone]
 
 
 1.14.3 (2015-03-29)
